<resources>
    <string name="app_name">Guia2</string>
    <string name="enunciado1">Ingrese sus datos:</string>
    <string name="enunciado2">Ingrese su fruta preferida</string>
    <string name="enunciado3">Ingrese su animal preferido</string>
    <string name="enunciado4">Ingrese su lenguaje preferido</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="correo">Correo Electronico</string>
    <string name="fruta">Ejemplo: Naranja</string>
    <string name="animal">Ejemplo: Leon</string>
    <string name="lenguaje">Ejemplo: C#</string>
    <string name="procesar">Procesar</string>
</resources>
